@@ -472,3 +472,8 @@ Parameter 	Description
 - 2010-06-03: ui enhancement
   sortable column headers in tab as basenames, mimetypes, and so on, should have
   a small indicator of the current sort order
+
+- default has changed for schemes (was coded as 'file' instead of '*')
+  when version is recorded (as 1.4.1 or 2.0) then schemes is reliable
+  when version is not recorded, it is a 2.30 serie, and scheme is not recorded when default (i.e. file)
+  do not try to force anything than that, but this will have to be documented
