@@ -8,6 +8,16 @@
 
 2010-06-04 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/api/na-object-api.h: Reorganization.
+
+	* src/core/na-icontext-factory.c: Set schemes default to '*'.
+
+	* src/nact/nact-icommand-tab.c: Get schemes from current object.
+
+	* src/nact/nact-ischemes-tab.c:
+	* src/nact/nact-ischemes-tab.h:
+	Take advantage of new nact_match_list_xxx functions.
+
 	* src/api/na-object-api.h:
 	* src/api/na-ifactory-object-data.h:
 	* src/core/na-object-profile-factory.c: Add NAFO_DATA_WORKING_DIR data.
